@@ -1,39 +1,26 @@
 package org.jetbrains.research.testgenie.evosuite
 
-import com.intellij.execution.configurations.GeneralCommandLine
-import com.intellij.execution.process.OSProcessHandler
-import com.intellij.execution.process.ProcessAdapter
-import com.intellij.execution.process.ProcessEvent
-import com.intellij.notification.NotificationGroupManager
-import com.intellij.notification.NotificationType
 import com.intellij.openapi.application.ApplicationManager
 import com.intellij.openapi.components.service
 import com.intellij.openapi.diagnostic.Logger
-import com.intellij.openapi.module.ModuleManager
 import com.intellij.openapi.progress.ProgressIndicator
 import com.intellij.openapi.progress.ProgressManager
 import com.intellij.openapi.progress.Task
 import com.intellij.openapi.project.Project
-import com.intellij.openapi.roots.CompilerModuleExtension
-import com.intellij.openapi.util.Key
 import com.intellij.openapi.util.io.FileUtilRt
-import com.intellij.util.concurrency.AppExecutorUtil
 import org.jetbrains.research.testgenie.TestGenieBundle
 import org.jetbrains.research.testgenie.Util
 import org.jetbrains.research.testgenie.editor.Workspace
 import org.jetbrains.research.testgenie.services.RunnerService
-import org.jetbrains.research.testgenie.services.SettingsApplicationService
-import org.jetbrains.research.testgenie.services.SettingsProjectService
 import org.jetbrains.research.testgenie.services.StaticInvalidationService
 import org.jetbrains.research.testgenie.services.TestCaseCachingService
 import org.jetbrains.research.testgenie.services.TestCaseDisplayService
+import org.jetbrains.research.testgenie.evosuite.generation.EvoSuiteProcessManager
 import org.evosuite.result.TestGenerationResultImpl
 import org.evosuite.utils.CompactReport
 import org.evosuite.utils.CompactTestCase
 import java.io.File
-import java.nio.charset.Charset
 import java.util.UUID
-import java.util.regex.Pattern
 
 /**
  * A utility class that runs evosuite as a separate process in its various
@@ -50,28 +37,23 @@ class Pipeline(
     private val projectClassPath: String,
     private val classFQN: String,
     private val fileUrl: String,
-    private val modTs: Long
+    private val modTs: Long,
 ) {
     private val log = Logger.getInstance(this::class.java)
 
-    private val evoSuiteProcessTimeout: Long = 12000000 // TODO: Source from config
-    private val evosuiteVersion = "1.0.5" // TODO: Figure out a better way to source this
+    private val evoSuiteProcessManager =
+        EvoSuiteProcessManager(project, projectPath, projectClassPath, fileUrl)
 
     private val sep = File.separatorChar
-    private val pluginsPath = com.intellij.openapi.application.PathManager.getPluginsPath()
-    private var evoSuitePath = "$pluginsPath${sep}TestGenie${sep}lib${sep}evosuite-$evosuiteVersion.jar"
 
     private val id = UUID.randomUUID().toString()
     private val testResultDirectory = "${FileUtilRt.getTempDirectory()}${sep}testGenieResults$sep"
     private val testResultName = "test_gen_result_$id"
 
-    private var key = Workspace.TestJobInfo(fileUrl, classFQN, modTs, testResultName, projectClassPath)
+    var key = Workspace.TestJobInfo(fileUrl, classFQN, modTs, testResultName, projectClassPath)
 
     private val serializeResultPath = "\"$testResultDirectory$testResultName\""
     private var baseDir = "$testResultDirectory$testResultName-validation"
-
-    private val settingsApplicationState = SettingsApplicationService.getInstance().state
-    private val settingsProjectState = project.service<SettingsProjectService>().state
 
     private var command = mutableListOf<String>()
     private var cacheFromLine: Int? = null
@@ -169,35 +151,31 @@ class Pipeline(
         ProgressManager.getInstance()
             .run(object : Task.Backgroundable(project, TestGenieBundle.message("evosuiteTestGenerationMessage")) {
                 override fun run(indicator: ProgressIndicator) {
-                    try {
-                        if (!skipCache) {
-                            // Check cache
-                            val hasCachedTests = tryShowCachedTestCases()
-                            if (hasCachedTests) {
-                                log.info("Found cached tests")
-                                indicator.stop()
-                                return
-                            }
-                        }
-
-                        if (indicator.isCanceled) {
+                    if (!skipCache) {
+                        // Check cache
+                        val hasCachedTests = tryShowCachedTestCases()
+                        if (hasCachedTests) {
+                            log.info("Found cached tests")
                             indicator.stop()
                             return
                         }
-
-                        if (projectBuilder.runBuild(indicator)) runEvoSuite(indicator)
-
-                        indicator.stop()
-                    } catch (e: Exception) {
-                        evosuiteError(TestGenieBundle.message("evosuiteErrorMessage").format(e.message))
-                        e.printStackTrace()
-                    } finally {
-                        // Revert to previous state
-                        val runnerService = project.service<RunnerService>()
-                        runnerService.isRunning = false
-                        val testCaseDisplayService = project.service<TestCaseDisplayService>()
-                        testCaseDisplayService.validateButton.isEnabled = true
                     }
+
+                    if (indicator.isCanceled) {
+                        indicator.stop()
+                        return
+                    }
+
+                    if (projectBuilder.runBuild(indicator)) {
+                        evoSuiteProcessManager.runEvoSuite(indicator, command, log, testResultName)
+                    }
+
+                    // Revert to previous state
+                    val runnerService = project.service<RunnerService>()
+                    runnerService.isRunning = false
+                    val testCaseDisplayService = project.service<TestCaseDisplayService>()
+                    testCaseDisplayService.validateButton.isEnabled = true
+                    indicator.stop()
                 }
             })
         val testCaseDisplayService = project.service<TestCaseDisplayService>()
@@ -239,120 +217,5 @@ class Pipeline(
         }
 
         return true
-    }
-
-    /**
-     * Executes EvoSuite.
-     *
-     * @param indicator the progress indicator
-     */
-    private fun runEvoSuite(indicator: ProgressIndicator) {
-        if (!settingsApplicationState?.seed.isNullOrBlank()) command.add("-seed=${settingsApplicationState?.seed}")
-        if (!settingsApplicationState?.configurationId.isNullOrBlank()) command.add("-Dconfiguration_id=${settingsApplicationState?.configurationId}")
-
-        // update build path
-        var buildPath = projectClassPath
-        if (settingsProjectState.buildPath.isEmpty()) {
-            // User did not set own path
-            buildPath = ""
-            for (module in ModuleManager.getInstance(project).modules) {
-                val compilerOutputPath = CompilerModuleExtension.getInstance(module)?.compilerOutputPath
-                compilerOutputPath?.let { buildPath += compilerOutputPath.path.plus(":") }
-            }
-        }
-        command[command.indexOf(projectClassPath)] = buildPath
-        key = Workspace.TestJobInfo(fileUrl, classFQN, modTs, testResultName, buildPath)
-        log.info("Generating tests for project $projectPath with classpath $buildPath inside the project")
-
-        // construct command
-        val cmd = ArrayList<String>()
-        cmd.add(settingsProjectState.javaPath)
-        cmd.add("-Djdk.attach.allowAttachSelf=true")
-        cmd.add("-jar")
-        cmd.add(evoSuitePath)
-        cmd.addAll(command)
-
-        val cmdString = cmd.fold(String()) { acc, e -> acc.plus(e).plus(" ") }
-        log.info("Starting EvoSuite with arguments: $cmdString")
-
-        indicator.isIndeterminate = false
-        indicator.text = TestGenieBundle.message("evosuiteSearchMessage")
-        val evoSuiteProcess = GeneralCommandLine(cmd)
-        evoSuiteProcess.charset = Charset.forName("UTF-8")
-        evoSuiteProcess.setWorkDirectory(projectPath)
-        val handler = OSProcessHandler(evoSuiteProcess)
-
-        // attach process listener for output
-        handler.addProcessListener(object : ProcessAdapter() {
-            override fun onTextAvailable(event: ProcessEvent, outputType: Key<*>) {
-                if (indicator.isCanceled) {
-                    log.info("Cancelling search")
-
-                    val workspace = project.service<Workspace>()
-                    workspace.cancelPendingResult(testResultName)
-
-                    handler.destroyProcess()
-                }
-
-                val text = event.text
-
-                val progressMatcher =
-                    Pattern.compile("Progress:[>= ]*(\\d+(?:\\.\\d+)?)%").matcher(text)
-                val coverageMatcher = Pattern.compile("Cov:[>= ]*(\\d+(?:\\.\\d+)?)%").matcher(text)
-
-                log.info(text) // kept for debugging purposes
-
-                val progress =
-                    if (progressMatcher.find()) progressMatcher.group(1)?.toDouble()?.div(100)
-                    else null
-                val coverage =
-                    if (coverageMatcher.find()) coverageMatcher.group(1)?.toDouble()?.div(100)
-                    else null
-                if (progress != null && coverage != null) {
-                    indicator.fraction = if (progress >= coverage) progress else coverage
-                } else if (progress != null) {
-                    indicator.fraction = progress
-                } else if (coverage != null) {
-                    indicator.fraction = coverage
-                }
-
-                if (indicator.fraction == 1.0 && indicator.text != TestGenieBundle.message("evosuitePostProcessMessage")) {
-                    indicator.text = TestGenieBundle.message("evosuitePostProcessMessage")
-                }
-            }
-        })
-
-        handler.startNotify()
-
-        // treat this as a join handle
-        if (!handler.waitFor(evoSuiteProcessTimeout)) {
-            evosuiteError("EvoSuite process exceeded timeout - ${evoSuiteProcessTimeout}ms")
-        }
-
-        if (!indicator.isCanceled) {
-            if (handler.exitCode == 0) {
-                // if process wasn't cancelled, start result watcher
-                AppExecutorUtil.getAppScheduledExecutorService()
-                    .execute(ResultWatcher(project, testResultName, fileUrl, classFQN))
-            } else {
-                evosuiteError("EvoSuite process exited with non-zero exit code - ${handler.exitCode}")
-            }
-        }
-    }
-
-    /**
-     * Show an EvoSuite execution error balloon.
-     *
-     * @param msg the balloon content to display
-     */
-    private fun evosuiteError(msg: String, title: String = TestGenieBundle.message("evosuiteErrorTitle")) {
-        NotificationGroupManager.getInstance()
-            .getNotificationGroup("EvoSuite Execution Error")
-            .createNotification(
-                title,
-                msg,
-                NotificationType.ERROR
-            )
-            .notify(project)
     }
 }
